added more choices and tweeked views

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -27,13 +27,13 @@
     }
   </style>
   <body>
-    <h1>The Coolest Rock, Paper, Scissors Game...Ever</h1>
+    <h1>The Coolest Rock, Paper, Scissors, Lizard, Spock Game!</h1>
     <p>Enter a throw choice:</p>
-    <form method='post' action='/throw'>
+    <form method='post' action='/'>
       <input name='choice' type='text'/>
       <input type='submit'/>
     </form>
-    <p>(Choose one: Rock, Paper, or Scissors)</p>
+    <p>(Choose one: Rock, Paper, Scissors, Lizard, Spock)</p>
     <%= yield %>
   </body>
 </html>
